Re-build everything

--- a/src/demos/basic.pug
+++ b/src/demos/basic.pug
@@ -6,5 +6,5 @@ block run
     PullToRefresh.init({
       bodyElement: '#main',
       triggerElement: '.trigger',
-      refreshFunction: () => console.log('OK'),
+      refreshFunction: () => alert('OSOM'),
     });
