Use es5 for demos; fix

--- a/src/demos/basic.pug
+++ b/src/demos/basic.pug
@@ -6,5 +6,5 @@ block run
     PullToRefresh.init({
       bodyElement: '#main',
       triggerElement: '.trigger',
-      refreshFunction: () => alert('OSOM'),
+      refreshFunction: function() { alert('OSOM') }
     });
