--- a/src/demos/basic.pug
+++ b/src/demos/basic.pug
@@ -5,6 +5,5 @@ block run
     /* global PullToRefresh */
     PullToRefresh.init({
       bodyElement: '#main',
-      triggerElement: '.trigger',
-      refreshFunction: function() { alert('OSOM') }
+      refreshFunction: function() { console.log('refresh') }
     });
