--- a/src/demos/_layout.pug
+++ b/src/demos/_layout.pug
@@ -14,14 +14,6 @@ html.no-js(lang='en')
         h1 Demo
 
     #main
-      .ptr
-
-        block ptr
-          .box
-            .content
-              span.icon.-on &darr;
-              span.icon.-off &hellip;
-
       .wrap
         | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         | tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -29,6 +21,9 @@ html.no-js(lang='en')
         | consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
         | cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         | proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    #footer
+      .wrap
+        | Footer
 
     script(src='/dist/pulltorefresh.js')
 
