Polished API and module structure; fix

--- a/src/demos/_layout.pug
+++ b/src/demos/_layout.pug
@@ -10,8 +10,8 @@ html.no-js(lang='en')
   body
     header
       .wrap
-        span.trigger &darr;
-        h1 Demo
+        block header
+          h1 Demo
 
     #main
       .wrap
