Add support for text/icon states

--- a/src/demos/basic.pug
+++ b/src/demos/basic.pug
@@ -4,6 +4,6 @@ block run
   script.
     /* global PullToRefresh */
     PullToRefresh.init({
-      bodyElement: '#main',
+      mainElement: '#main',
       refreshFunction: function() { console.log('refresh') }
     });
