--- a/src/demos/trigger.pug
+++ b/src/demos/trigger.pug
@@ -8,7 +8,7 @@ block run
   script.
     /* global PullToRefresh */
     PullToRefresh.init({
-      bodyElement: '#main',
+      mainElement: '#main',
       triggerElement: '.trigger',
       refreshFunction: function() { console.log('refresh') }
     });
