--- a/src/_styles.less
+++ b/src/_styles.less
@@ -23,4 +23,19 @@
   &pull {
     transition: none;
   }
+
+  &text {
+    color: rgba(0, 0, 0, 0.3);
+    margin-bottom: .33em;
+  }
+
+  &icon {
+    transition: transform .3s;
+  }
+
+  &release {
+    .__PREFIX__icon {
+      transform: rotate(180deg);
+    }
+  }
 }
