--- a/src/_styles.less
+++ b/src/_styles.less
@@ -25,11 +25,12 @@
   }
 
   &text {
+    margin-top: .33em;
     color: rgba(0, 0, 0, 0.3);
-    margin-bottom: .33em;
   }
 
   &icon {
+    color: rgba(0, 0, 0, 0.3);
     transition: transform .3s;
   }
 
