--- a/src/demos/basic.pug
+++ b/src/demos/basic.pug
@@ -5,5 +5,5 @@ block run
     /* global PullToRefresh */
     PullToRefresh.init({
       mainElement: '#main',
-      refreshFunction: function() { console.log('refresh') }
+      refreshFunction: function() { alert('refresh') }
     });
