--- a/src/demos/raw.pug
+++ b/src/demos/raw.pug
@@ -3,4 +3,6 @@ extend _layout
 block run
   script.
     /* global PullToRefresh */
-    PullToRefresh.init();
+    PullToRefresh.init({
+      refreshFunction: function() { alert('refresh') },
+    });
