--- a/src/demos/_layout.pug
+++ b/src/demos/_layout.pug
@@ -21,6 +21,12 @@ html.no-js(lang='en')
         | consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
         | cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         | proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+        p.links
+          a(href='/demos/raw.html') Raw
+          a(href='/demos/basic.html') Basic
+          a(href='/demos/trigger.html') Trigger
+
     #footer
       .wrap
         | Footer
