--- a/src/demos/style.less
+++ b/src/demos/style.less
@@ -1,6 +1,9 @@
 body {
   margin: 0;
   padding: 0;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
   font: 15px / 1.15 Helvetica, Arial, sans-serif;
 }
 
@@ -22,7 +25,15 @@ header {
   }
 }
 
+pre {
+  background: rgba(0, 0, 0, .1);
+  font-size: 12px;
+  overflow: auto;
+  padding: 5px;
+}
+
 #main {
+  flex: 1;
   padding-top: 20px;
   transition: transform .3s;
 }
@@ -35,4 +46,16 @@ header {
   float: right;
   display: block;
   border: 1px solid white;
+}
+
+.links {
+  a ~ a {
+    margin-left: 1em;
+  }
+}
+
+
+#footer {
+  background: #eef;
+  padding: 10px 0;
 }
