--- a/src/demos/trigger.pug
+++ b/src/demos/trigger.pug
@@ -10,5 +10,5 @@ block run
     PullToRefresh.init({
       mainElement: '#main',
       triggerElement: '.trigger',
-      refreshFunction: function() { alert('refresh') }
+      onRefresh: function() { alert('refresh') }
     });
