--- a/src/demos/raw.pug
+++ b/src/demos/raw.pug
@@ -4,5 +4,5 @@ block run
   script.
     /* global PullToRefresh */
     PullToRefresh.init({
-      onRefresh: function() { alert('refresh') },
+      onRefresh: function() { alert('refresh'); this.release(); },
     });
