CSS Prop to var

--- a/src/_styles.less
+++ b/src/_styles.less
@@ -6,7 +6,7 @@
     font-weight: bold;
     top: 0;
     height: 0;
-    transition: height .3s;
+    transition: height 0.3s, min-height 0.3s;
     text-align: center;
     width: 100%;
     overflow: hidden;
