Demos: Fix raw, add promise

--- a/src/demos/_layout.pug
+++ b/src/demos/_layout.pug
@@ -26,6 +26,7 @@ html.no-js(lang='en')
           a(href='/demos/raw.html') Raw
           a(href='/demos/basic.html') Basic
           a(href='/demos/trigger.html') Trigger
+          a(href='/demos/promise.html') Promise
 
     #footer
       .wrap
