Fixing promise/cb impl

--- a/src/demos/_layout.pug
+++ b/src/demos/_layout.pug
@@ -27,6 +27,7 @@ html.no-js(lang='en')
           a(href='/demos/basic.html') Basic
           a(href='/demos/trigger.html') Trigger
           a(href='/demos/promise.html') Promise
+          a(href='/demos/callback.html') Callback
 
     #footer
       .wrap
