--- a/src/demos/promise.pug
+++ b/src/demos/promise.pug
@@ -5,15 +5,12 @@ block run
     /* global PullToRefresh */
     PullToRefresh.init({
       mainElement: '#main', // above which element?
-      onRefresh: function(){
-        var promise = new Promise(
-          function(resolve, reject){
-            setTimeout(()=>{
-              resolve();
-              alert('refresh');
-            }, 1500);
-          }
-        );
-        return promise;
+      onRefresh: function () {
+        return new Promise(function (resolve) {
+          setTimeout(function () {
+            resolve();
+            alert('refresh');
+          }, 1500);
+        });
       }
     });
