--- a/src/_styles.less
+++ b/src/_styles.less
@@ -34,6 +34,12 @@
     transition: transform .3s;
   }
 
+  // When at the top of the page, disable vertical overscroll so passive touch
+  // listeners can take over.
+  &top {
+    touch-action: pan-x pan-down pinch-zoom;
+  }
+  
   &release {
     .__PREFIX__icon {
       transform: rotate(180deg);
