Upgrade all demos; use .min.js

--- a/src/demos/_layout.pug
+++ b/src/demos/_layout.pug
@@ -33,6 +33,6 @@ html.no-js(lang='en')
       .wrap
         | Footer
 
-    script(src='/dist/pulltorefresh.js')
+    script(src='/dist/pulltorefresh.min.js')
 
     block run
