Update Readme and demos

--- a/src/demos/_layout.pug
+++ b/src/demos/_layout.pug
@@ -31,7 +31,11 @@ html.no-js(lang='en')
 
     #footer
       .wrap
-        | Footer
+        ul.footer-links
+          li
+            a(href='https://www.boxfactura.com/pulltorefresh.js/') PullToRefresh.js
+          li
+            a(href='https://github.com/BoxFactura/pulltorefresh.js') Contribute on Github
 
     script(src='/dist/pulltorefresh.min.js')
 
