--- a/src/demos/_layout.pug
+++ b/src/demos/_layout.pug
@@ -15,16 +15,18 @@ html.no-js(lang='en')
 
     #main
       .wrap
-        | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        | tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        | quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        | consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        | cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        | proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        block content
+          | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          | tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          | quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          | consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          | cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          | proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
         p.links
           a(href='/demos/raw.html') Raw
           a(href='/demos/basic.html') Basic
+          a(href='/demos/shouldptr.html') Should pull to refresh?
           a(href='/demos/trigger.html') Trigger
           a(href='/demos/promise.html') Promise
           a(href='/demos/callback.html') Callback
