Upgrade sources; fix demos

--- a/src/demos/style.less
+++ b/src/demos/style.less
@@ -48,12 +48,32 @@ pre {
   border: 1px solid white;
 }
 
+.buttons {
+  border-bottom: 1px solid silver;
+  padding-bottom: 20px;
+  text-align: center;
+
+  > * {
+    border: 1px solid silver;
+    background: silver;
+    color: black;
+    padding: 5px;
+  }
+}
+
 .links {
   a ~ a {
     margin-left: 1em;
   }
 }
 
+.flex {
+  display: flex;
+
+  > * {
+    width: 50%;
+  }
+}
 
 #footer {
   background: #eef;
