--- a/src/demos/_layout.pug
+++ b/src/demos/_layout.pug
@@ -14,6 +14,8 @@ html.no-js(lang='en')
           h1 Demo
 
     #main
+      block main
+
       .wrap
         block content
           | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -30,6 +32,7 @@ html.no-js(lang='en')
           a(href='/demos/trigger.html') Trigger
           a(href='/demos/promise.html') Promise
           a(href='/demos/callback.html') Callback
+          a(href='/demos/multiple.html') Multiple Instances
 
     #footer
       .wrap
@@ -39,6 +42,6 @@ html.no-js(lang='en')
           li
             a(href='https://github.com/BoxFactura/pulltorefresh.js') Contribute on Github
 
-    script(src='/dist/pulltorefresh.min.js')
+    script(src='/dist/pulltorefresh.js')
 
     block run
