Add hammer-touchemulator for demo and e2e purposes; fix

--- a/src/demos/_layout.pug
+++ b/src/demos/_layout.pug
@@ -43,6 +43,9 @@ html.no-js(lang='en')
           li
             a(href='https://github.com/BoxFactura/pulltorefresh.js') Contribute on Github
 
-    script(src='../dist/pulltorefresh.js')
+    script(src='//unpkg.com/hammer-touchemulator@0.0.2/touch-emulator.js')
+    script TouchEmulator()
+
+    script(src='/dist/pulltorefresh.js')
 
     block run
