--- a/src/demos/_layout.pug
+++ b/src/demos/_layout.pug
@@ -33,6 +33,7 @@ html.no-js(lang='en')
           a(href='/demos/promise.html') Promise
           a(href='/demos/callback.html') Callback
           a(href='/demos/multiple.html') Multiple Instances
+          a(href='/demos/tolerance.html') With tolerance
 
     #footer
       .wrap
