--- a/src/demos/_layout.pug
+++ b/src/demos/_layout.pug
@@ -5,7 +5,7 @@ html.no-js(lang='en')
     meta(http-equiv='x-ua-compatible' content='ie=edge')
     title Pull To Refresh Demo
     meta(name='viewport' content='width=device-width, initial-scale=1')
-    link(rel='stylesheet' href='/demos/style.css')
+    link(rel='stylesheet' href='style.css')
 
   body
     header
@@ -43,6 +43,6 @@ html.no-js(lang='en')
           li
             a(href='https://github.com/BoxFactura/pulltorefresh.js') Contribute on Github
 
-    script(src='/dist/pulltorefresh.js')
+    script(src='../dist/pulltorefresh.js')
 
     block run
