--- a/src/docs/demos/shouldptr.pug
+++ b/src/docs/demos/shouldptr.pug
@@ -1,4 +1,7 @@
-extend _layout
+extend ../layout
+
+block setup
+  - basedir = '..'
 
 block content
   | <label><input type="checkbox" id="shouldptr"> Should PullToRefresh be triggered?</label><br>
