Revert docs/ => demos/; cleanup

--- a/src/demos/shouldptr.pug
+++ b/src/demos/shouldptr.pug
@@ -1,7 +1,4 @@
-extend ../layout
-
-block setup
-  - basedir = '..'
+extend ../_/layout
 
 block content
   | <label><input type="checkbox" id="shouldptr"> Should PullToRefresh be triggered?</label><br>
