--- a/src/_/layout.pug
+++ b/src/_/layout.pug
@@ -1,16 +1,3 @@
-mixin demos(root)
-  a(href=`${root}/raw.html`) Raw
-  a(href=`${root}/basic.html`) Basic
-  a(href=`${root}/shouldptr.html`) Should pull to refresh?
-  a(href=`${root}/trigger.html`) Trigger
-  a(href=`${root}/promise.html`) Promise
-  a(href=`${root}/callback.html`) Callback
-  a(href=`${root}/multiple.html`) Multiple Instances
-  a(href=`${root}/tolerance.html`) With tolerance
-
-block setup
-  - basedir = '.'
-
 doctype html
 html.no-js(lang='en')
   head
@@ -18,8 +5,7 @@ html.no-js(lang='en')
     meta(http-equiv='x-ua-compatible' content='ie=edge')
     title Pull To Refresh Demo
     meta(name='viewport' content='width=device-width, initial-scale=1')
-    script(src='//unpkg.com/hammer-touchemulator@0.0.2/touch-emulator.js')
-    link(rel='stylesheet' href=`${basedir}/style.css`)
+    link(rel='stylesheet' href='style.css')
 
   body
     header
@@ -40,7 +26,14 @@ html.no-js(lang='en')
           | proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
         p.links
-          +demos(`${basedir != '.' ? '..' : '.'}/demos`)
+          a(href='raw.html') Raw
+          a(href='basic.html') Basic
+          a(href='shouldptr.html') Should pull to refresh?
+          a(href='trigger.html') Trigger
+          a(href='promise.html') Promise
+          a(href='callback.html') Callback
+          a(href='multiple.html') Multiple Instances
+          a(href='tolerance.html') With tolerance
 
     #footer
       .wrap
@@ -50,7 +43,6 @@ html.no-js(lang='en')
           li
             a(href='https://github.com/BoxFactura/pulltorefresh.js') Contribute on Github
 
-    script(src=`${basedir}/pulltorefresh.min.js`)
-    script TouchEmulator()
+    script(src='pulltorefresh.min.js')
 
     block run
