Cleanup; few items to avoid scrollbars during e2e-tests

--- a/src/style.less
+++ b/src/style.less
@@ -62,8 +62,15 @@ pre {
 }
 
 .links {
-  a ~ a {
-    margin-left: 1em;
+  display: flex;
+  flex-wrap: wrap;
+
+  a {
+    margin-right: 1em;
+
+    &:last-child  {
+      margin: 0;
+    }
   }
 }
 
