Fixed build+E2E setup; cleanup

--- a/src/_/layout.pug
+++ b/src/_/layout.pug
@@ -51,6 +51,6 @@ html.no-js(lang='en')
         s.onload = function () { window.TouchEmulator(); };
         document.getElementsByTagName('head')[0].appendChild(s);
 
-    script(src='pulltorefresh.min.js')
+    script(src='index.umd.min.js')
 
     block run
