--- a/src/demos/multiple.pug
+++ b/src/demos/multiple.pug
@@ -27,6 +27,9 @@ block run
           cb();
           alert('refresh 1');
         }, 1500);
+      },
+      shouldPullToRefresh: function(){
+        return !this.mainElement.scrollTop;
       }
     });
     var b = PullToRefresh.init({
@@ -37,5 +40,8 @@ block run
           cb();
           alert('refresh 2');
         }, 1500);
+      },
+      shouldPullToRefresh: function(){
+        return !this.mainElement.scrollTop;
       }
     });
